code/typescript/FactSetTickHistory/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Tick History client library for JavaScript

[![npm](https://img.shields.io/npm/v/@factset/sdk-factsettickhistory)](https://www.npmjs.com/package/@factset/sdk-factsettickhistory)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Tick History **Level 2** provides dynamic access to the historical tick data up to 10 levels of depth for a specific security for specific dates or date range. The API generates output files with data based on client-specified input parameters. The input parameters include universe specification and date ranges for which the data will be generated. When the API request with specified input parameters has been completed, the output files will be made available back to the users through a secure URL to the location where the files are stored. Therefore, this API has two APIs (i) Request files API (ii) Get Files API.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.0.0
- Package version: 0.0.1
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 14

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-factsettickhistory
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-factsettickhistory
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=14. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 16
      nvm use 16
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:


```javascript
const { ApiClient, GetFilesLevel2BETAApi } = require('@factset/sdk-factsettickhistory');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new GetFilesLevel2BETAApi();
const requestId = "requestId_example"; // String | RequestId returned by request-files endpoint to poll and collect results of the query
const opts = {
  'paginationLimit': 20, // Number | Specifies the maximum number of results to return per response page
  'paginationOffset': 0 // Number | Specifies the starting point for pagination. This parameter is used to identify the beginning of next set of results
};

// Call api endpoint
apiInstance.getTickHistoryFilesLevel2(requestId, opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/bulk-documents/tick-history/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*factsettickhistory.GetFilesLevel2BETAApi* | [**getTickHistoryFilesLevel2**](docs/GetFilesLevel2BETAApi.md#getTickHistoryFilesLevel2) | **GET** /level2/get-files | Returns the files for the requested requestId
*factsettickhistory.RequestFilesLevel2BETAApi* | [**getrequestIdLevel2**](docs/RequestFilesLevel2BETAApi.md#getrequestIdLevel2) | **GET** /level2/request-files | Returns the requestId and status


## Documentation for Models

 - [factsettickhistory.ErrorExample](docs/ErrorExample.md)
 - [factsettickhistory.Files](docs/Files.md)
 - [factsettickhistory.GetFilesResponseLevel2](docs/GetFilesResponseLevel2.md)
 - [factsettickhistory.IsPartial](docs/IsPartial.md)
 - [factsettickhistory.Level2RequestFilesResponse](docs/Level2RequestFilesResponse.md)
 - [factsettickhistory.Meta](docs/Meta.md)
 - [factsettickhistory.Pagination](docs/Pagination.md)
 - [factsettickhistory.Status](docs/Status.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
