code/typescript/FactSetTickHistory/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Tick History client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v1.1.0-blue)]()
[![npm](https://img.shields.io/npm/v/@factset/sdk-factsettickhistory)](https://www.npmjs.com/package/@factset/sdk-factsettickhistory)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

TickHistory provides dynamic access to historical tick data for a specific security for specific dates or date range.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.1.0
- SDK version: 0.23.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-factsettickhistory@0.23.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-factsettickhistory@0.23.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, GetFilesApi } = require('@factset/sdk-factsettickhistory');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new GetFilesApi();
const requestId = "requestId_example"; // String | RequestId returned by request-files endpoint to poll and collect results of the query
const opts = {
  'paginationLimit': 20, // Number | Specifies the maximum number of results to return per response page
  'paginationOffset': 0 // Number | Specifies the starting point for pagination. This parameter is used to identify the beginning of next set of results
};

// Call api endpoint
apiInstance.v1GetFilesGet(requestId, opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-factsettickhistory');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api-sandbox.factset.com/bulk-documents/tickhistory*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*factsettickhistory.GetFilesApi* | [**v1GetFilesGet**](docs/GetFilesApi.md#v1GetFilesGet) | **GET** /v1/get-files | Returns the files from tickhistory endpoint for the specified date range
*factsettickhistory.RequestFilesApi* | [**v1RequestFilesGet**](docs/RequestFilesApi.md#v1RequestFilesGet) | **GET** /v1/request-files | Returns the requestId and status


## Documentation for Models

 - [factsettickhistory.Data](docs/Data.md)
 - [factsettickhistory.GetFilesErrorDetail](docs/GetFilesErrorDetail.md)
 - [factsettickhistory.GetFilesResponse](docs/GetFilesResponse.md)
 - [factsettickhistory.GetFilesStatus](docs/GetFilesStatus.md)
 - [factsettickhistory.Meta](docs/Meta.md)
 - [factsettickhistory.Pagination](docs/Pagination.md)
 - [factsettickhistory.Partial](docs/Partial.md)
 - [factsettickhistory.RequestFileErrorDetails](docs/RequestFileErrorDetails.md)
 - [factsettickhistory.RequestFilesResponse](docs/RequestFilesResponse.md)
 - [factsettickhistory.RequestFilestatus](docs/RequestFilestatus.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
